--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>踹踹 (TryTry) 酷炫版原型</title>
+    <title>试玩平台</title>
     <style>
         /* --- 全局酷炫风格定义 --- */
         :root {
